<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="369dp"
        android:layout_height="364dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/scorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sureText">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:contentDescription="@string/todo1"
            android:onClick="increaseScore"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/e"
            tools:ignore="DuplicateSpeakableTextCheck" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:contentDescription="@string/todo4"
            android:onClick="increaseScore"
            app:layout_column="1"

            app:layout_row="0"
            app:srcCompat="@drawable/e" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:contentDescription="@string/todo"
            android:onClick="increaseScore"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@drawable/e" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:contentDescription="@string/todo5"
            android:onClick="increaseScore"
            app:layout_column="0"
            app:layout_row="1"
            app:srcCompat="@drawable/e" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:contentDescription="@string/todo6"
            android:onClick="increaseScore"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@drawable/e" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:contentDescription="@string/todo3"
            android:onClick="increaseScore"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@drawable/e" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:contentDescription="@string/todo7"
            android:onClick="increaseScore"
            app:layout_column="0"
            app:layout_row="2"
            app:srcCompat="@drawable/e" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:contentDescription="@string/todo2"
            android:onClick="increaseScore"
            app:layout_column="1"
            app:layout_row="2"
            app:srcCompat="@drawable/e" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:contentDescription="@string/todo8"
            android:onClick="increaseScore"
            app:layout_column="2"
            app:layout_row="2"
            app:srcCompat="@drawable/e" />

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/sureText"
        android:layout_width="193dp"
        android:layout_height="122dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="54dp"
        android:text="Sure:10"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scorText"
        android:layout_width="187dp"
        android:layout_height="43dp"
        android:layout_marginBottom="38dp"
        android:text="Skor:0"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>